--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@ h3  {color: white; }
 }
 
 img { 
-  width: 100%;
+  width: 50%;
   height: auto;
   opacity: 0.3;
 }
+  class="center"{color: white;}
 
 </style>
 </head>
