--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@ h3  {color: white; }
 }
 
 img { 
-  width: 50%;
-  height: auto;
-  opacity: 0.3;
+  width:500px; height:600px; opacity: 0.3;
 }
   class="center"{color: white;}
 
