--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ h3  {color: white; }
 }
 
 img { 
-  width:100px; height:150px; opacity: 0.2;
+  width:100px; height:150px; opacity: 0.1;
 }
   class="center"{color: white;}
-
+  h4 { color: white;}
 </style>
 </head>
 <a href="./gallery.html">הגלריה שלי</a>" 
@@ -37,31 +37,31 @@ img {
 
 
 <br />
-<h3></h3>
+<h3>ירושלים</h3>
 <div class="container">
 <img src="jeruslem.jpeg"/>
-  <div class="center">ירושלים היא עיר הבירה של מדינת ישראל ושל מחוז ירושלים, והעיר הגדולה ביותר בישראל בגודל האוכלוסייה.</div>
+  <div class="center"><h4>ירושלים היא עיר הבירה של מדינת ישראל ושל מחוז ירושלים, והעיר הגדולה ביותר בישראל בגודל האוכלוסייה</h4>.</div>
 </div>
 <br />
 <h3>תל אביב</h3>
 <br />
 <div class="container">
 <img src="tel aviv.jpeg"/>
-<div class="center">תל אביב, היא עיר במחוז תל אביב בישראל, במישור החוף הדרומי, המרכזית מבין ערי גוש דן והשנייה בגודל אוכלוסייתה בישראל. </div>
+<div class="center"><h4>תל אביב, היא עיר במחוז תל אביב בישראל, במישור החוף הדרומי, המרכזית מבין ערי גוש דן והשנייה בגודל אוכלוסייתה בישראל. </h4></div>
 </div>
 <br />
 <h3>ים המלח</h3>
 <br />
 <div class="container">
 <img src="the dead sea.jpeg"/>
-<div class="center">ים המלח הוא אגם מלח חסר-מוצא לים, הנמצא בתחום הבקע הסורי-אפריקני ובמרכזו עובר הגבול בין ישראל לירדן. </div>
+<div class="center"><h4>ים המלח הוא אגם מלח חסר-מוצא לים, הנמצא בתחום הבקע הסורי-אפריקני ובמרכזו עובר הגבול בין ישראל לירדן. </h4></div>
 </div>
 <br />
 <h3>טבריה והכנרת</h3>
 <br />
 <div class="container">
 <img src="tiberias.jpeg"/>
-<div class="center">טבריה היא עיר במחוז הצפון בישראל, בגליל התחתון ובבקעת כינרות. טבריה שוכנת לחופה המערבי של הכנרת והיא העיר היחידה הממוקמת לחופי ימה זו.</div>
+<div class="center"><h4>טבריה היא עיר במחוז הצפון בישראל, בגליל התחתון ובבקעת כינרות. טבריה שוכנת לחופה המערבי של הכנרת והיא העיר היחידה הממוקמת לחופי ימה זו.</h4></div>
 </div>
 
 
