--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ h3  {color: white; }
 }
 
 img { 
-  width:100px; height:150px; opacity: 0.1;
+  width:80%; height:auto; opacity: 0.1;
 }
   class="center"{color: white;}
   h4 { color: white;}
